# moonwalk-analytics

./: .env.example  .gitignore  Dashboard_roadmap.md  Moonwalk Launcher.ps1  Procfile  Start-API.ps1  Start-Dashboard.ps1  alembic.ini  cleancloud_to_duckdb.py  cleancloud_to_excel_MASTER.py  cleancloud_to_postgres.py  config.ps1  config.py  customer_report_shared.py  dashboard_shared.py  extract_powerquery_mcode.ps1  generate_dimperiod.py  generate_report.py  helpers.ps1  helpers.py  logger_config.ps1  logger_config.py  moonwalk_dashboard.py  moonwalk_flow.py  nixpacks.toml  notion_kpi_push.py  notion_push.py  purge_and_encrypt.ps1  pyproject.toml  refresh_cli.py  refresh_moonwalk_data.ps1  requirements-api.txt  requirements.txt  roadmap-employee-hr.md  roadmap-moonwalk.md  section_data.py  seed_employees.py  transform_all_customers.py  transform_all_items.py  transform_all_sales.py  (+2 more)
.devcontainer/: devcontainer.json
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 001_analytics_schema.py
api/: auth.py  database.py  main.py  models.py
api/routers/: employees.py  health.py
appsmith/: setup.md
archive/: history-completed-cycles.md
db/: database.py
pages/: cohort.py  customer_analytics.py  customer_insights.py  customer_report.py  customer_report_revenue.py  customers.py  executive_pulse.py  financial_performance.py  items.py  logistics.py  new_customers.py  operations.py  operations_center.py  overview.py  payments.py  revenues.py  stops.py
tests/: conftest.py  test_api.py  test_dashboard_smoke.py  test_flow.py  test_golden_baselines.py  test_helpers.py  test_report.py  test_sql_queries.py  test_transforms.py
tests/fixtures/: CC-Customers-Test.csv  CC-Items-Test.csv  CC-Orders-Test.csv
