[project]
name = "moonwalk-analytics"
version = "2.6.0"
description = "Data pipeline and dashboard for Moonwalk laundry/dry-cleaning analytics"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "duckdb>=1.4",
    "streamlit>=1.40",
    "plotly>=5.0",
    "notion-client>=2.2",
    "openai>=1.0",
    "fpdf2>=2.8",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-playwright>=0.5.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests that run the full pipeline (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring fixtures or DuckDB",
    "playwright: marks browser smoke tests requiring a running dashboard",
    "api: marks FastAPI endpoint tests (no network, no running server)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
